Commit template criar pensamento

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-cabecalho></app-cabecalho>
-<main></main> <!-- para colocar o rodapé no final da page -->
+<main>
+  <app-criar-pensamento></app-criar-pensamento>
+</main>
 <app-rodape></app-rodape>
