--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -14,7 +14,7 @@
       id="pensamento"
       name="pensamento"
       placeholder="Digite o pensamento"
-      [value]="pensamento.conteudo"
+      [(ngModel)]="pensamento.conteudo"
     />
 
     <label for="autoria">Autoria ou fonte</label>
@@ -24,14 +24,15 @@
       id="autoria"
       name="autoria"
       placeholder="Digite a autoria ou fonte"
-      [value]="pensamento.autoria"
+      [(ngModel)]="pensamento.autoria"
     />
 
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
         <label for="modelo1">
-          <input type="radio" id="modelo1" value="modelo1" name="modelo-card" />
+          <input type="radio" id="modelo1" value="modelo1" name="modelo-card"
+          [(ngModel)]="pensamento.modelo" />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -47,7 +48,8 @@
 
       <div class="radio-modelo">
         <label for="modelo2">
-          <input type="radio" id="modelo2" value="modelo2" name="modelo-card" />
+          <input type="radio" id="modelo2" value="modelo2" name="modelo-card"
+          [(ngModel)]="pensamento.modelo" />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -66,7 +68,8 @@
 
       <div class="radio-modelo">
         <label for="modelo3">
-          <input type="radio" id="modelo3" value="modelo3" name="modelo-card" />
+          <input type="radio" id="modelo3" value="modelo3" name="modelo-card"
+          [(ngModel)]="pensamento.modelo" />
           <div class="custom-radio">
             <span></span>
           </div>
