--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-cabecalho></app-cabecalho>
 <main>
-  <app-criar-pensamento></app-criar-pensamento>
+  <!-- <app-criar-pensamento></app-criar-pensamento>
+  <app-listar-pensamento></app-listar-pensamento> -->
+
+  <router-outlet></router-outlet>
+
 </main>
 <app-rodape></app-rodape>
