--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -16,6 +16,10 @@
       placeholder="Digite o pensamento"
     />
 
+    <div class="mensagem__erro" *ngIf="formulario.get('conteudo')?.errors?.['required'] && formulario.get('conteudo')?.touched " >
+      Pensamento é obrigatório!
+    </div>
+
     <label for="autoria">Autoria ou fonte</label>
     <input
       type="text"
@@ -24,6 +28,13 @@
       formControlName="autoria"
       placeholder="Digite a autoria ou fonte"
     />
+
+    <div class="mensagem__erro" *ngIf="formulario.get('autoria')?.errors?.['required'] && formulario.get('autoria')?.touched " >
+      Autoria é obrigatória!
+    </div>
+    <div class="mensagem__erro" *ngIf="formulario.get('autoria')?.errors?.['minlength'] && formulario.get('autoria')?.touched " >
+      Autoria precisa ter pelo 3 caracteres!
+    </div>
 
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
@@ -83,7 +94,11 @@
     </div>
 
     <div class="acoes">
-      <button (click)="criarPensamento()" class="botao">Salvar</button>
+      <button
+      [disabled]="!formulario.valid"
+      (click)="criarPensamento()"
+      [ngClass]="habilitarBotao()"
+      >Salvar</button>
       <button (click)="cancelar()" class="botao">Cancelar</button>
     </div>
   </form>
