--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -11,9 +11,14 @@
 
     <h2 class="ff-inter"> Meu Mural</h2>
 
-    <button class="botao" routerLink="/criarPensamento">
-      Adicionar pensamento
-    </button>
+    <div class="botoes">
+      <button class="botao">Meu Mural</button>
+      <button class="botao" (click)="listarFavoritos()">Meus Favoritos</button>
+      <button class="botao" routerLink="/criarPensamento">
+        Adicionar pensamento
+      </button>
+    </div>
+
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos" >
     <div *ngFor="let pensamento_do_for of listaPensamentos">
