--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -9,10 +9,10 @@
       <img src="/assets/imagens/lupa.png" alt="Lupa azul">
     </div>
 
-    <h2 class="ff-inter"> Meu Mural</h2>
+    <h2 class="ff-inter"> {{ titulo }} </h2>
 
     <div class="botoes">
-      <button class="botao">Meu Mural</button>
+      <button class="botao" (click)="carregarComponente()">Meu Mural</button>
       <button class="botao" (click)="listarFavoritos()">Meus Favoritos</button>
       <button class="botao" routerLink="/criarPensamento">
         Adicionar pensamento
@@ -22,7 +22,10 @@
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos" >
     <div *ngFor="let pensamento_do_for of listaPensamentos">
-      <app-pensamento [pensamento_componente]="pensamento_do_for"></app-pensamento>
+      <app-pensamento
+        [pensamento_componente]="pensamento_do_for"
+        [listaFavoritos]="listaFavoritos"
+      ></app-pensamento>
     </div>
   </div>
 </section>
